--- a/.drone.yml
+++ b/.drone.yml
@@ -3,6 +3,7 @@ build:
   test:
     image: golang:1.8-alpine
     commands:
+      - apk update && apk add git mercurial bzr && rm -rf /var/cache/apk/*
       - go get
       - go build -o app
     when:
