--- a/.drone.yml
+++ b/.drone.yml
@@ -47,6 +47,9 @@ deploy:
       app: video-captions-api
       env: dev
       port: 8000
+      ce_esp_port: 8001
+      ce_service_name: video-captions-api.endpoints.nyt-video-dev.cloud.goog
+      ce_service_version: 2017-05-31r0
       replicas: 3
       # NOTE: recommend minimum of 2 to ensure uptime during a rolling deploy.
       replicas_min: 2
