--- a/.drone.yml
+++ b/.drone.yml
@@ -63,6 +63,39 @@ deploy:
       branch: master
       event: push
 
+  gke-prd:
+    image: nytimes/drone-gke
+
+    # For debugging
+    dry_run: true
+    verbose: true
+
+    zone: us-central1-b
+    cluster: prd-cluster
+    token: >
+      $$GOOGLE_CREDENTIALS_PRD
+
+    # These variables are made available in the .kube.yml template.
+    vars:
+      image: us.gcr.io/nyt-video-dev/video-captions-api:$$COMMIT
+      app: video-captions-api
+      env: prd
+      replicas: 5
+      # NOTE: recommend minimum of 2 to ensure uptime during a rolling deploy.
+      replicas_min: 3
+      replicas_max: 10
+      cpu: 80
+      port: 8000
+      ce_esp_port: 8001
+      ce_service_name: video-captions-api.endpoints.nyt-video-prd.cloud.goog
+      ce_service_version: 2017-06-01r0
+      ip_name: video-captions-api
+      cert_name: star-nyt-net-cert
+
+    when:
+      event: tag
+
+
 notify:
   slack:
     webhook_url: $$SLACK_WEBHOOK_URL
