--- a/.drone.yml
+++ b/.drone.yml
@@ -5,6 +5,7 @@ build:
     commands:
       - apk update && apk add git mercurial bzr
       - go get
+      - go test -v ./...
       - go build -o captions-api
     when:
       branch: master
