--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,7 @@ build:
     image: golang:1.8-alpine
     commands:
       - apk update && apk add git mercurial bzr
-      - go get
+      - go get ./...
       - go test -v ./...
       - go build -o captions-api
     when:
