dont update on go get

--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,7 @@ build:
     image: golang:1.8-alpine
     commands:
       - apk -qq update && apk -qq --no-cache add git mercurial bzr
-      - go get -u -t ./...
+      - go get -t ./...
       - go test -v ./...
       - go build -o captions-api
     when:
