--- a/.kube.sec.yml
+++ b/.kube.sec.yml
@@ -4,7 +4,11 @@ apiVersion: v1
 kind: Secret
 
 metadata:
-  name: secrets
+  name: captions-api-secrets
 
 type: Opaque
+
+data:
+  three-play-api-key: {{.three_play_api_key}}
+  three-play-api-secret: {{.three_play_api_secret}}
 
