--- a/.kube.yml
+++ b/.kube.yml
@@ -53,6 +53,8 @@ spec:
             - containerPort: {{.port}}
           # Quote all environment variable values
           env:
+            - name: ENABLE_STACKDRIVER
+              value: true
             - name: SERVER_HTTP_PORT
               value: "8000"
             - name: SERVER_GIZMO_HEALTH_CHECK_PATH
