--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,6 +4,9 @@ WORKDIR /go/src/github.com/NYTimes/video-captions-api
 
 RUN apk -qq update && apk -qq add --no-cache git mercurial bzr && go get github.com/pilu/fresh
 
+ENV SERVER_HTTP_PORT 8000
+ENV SERVER_GIZMO_HEALTH_CHECK_PATH /healthz
+
 COPY . .
 
 RUN go get -t ./...
