--- a/.kube.yml
+++ b/.kube.yml
@@ -54,7 +54,7 @@ spec:
           # Quote all environment variable values
           env:
             - name: ENABLE_STACKDRIVER
-              value: true
+              value: "true"
             - name: SERVER_HTTP_PORT
               value: "8000"
             - name: SERVER_GIZMO_HEALTH_CHECK_PATH
