--- a/.drone.yml
+++ b/.drone.yml
@@ -3,6 +3,7 @@ build:
   test:
     image: golang:1.8-alpine
     commands:
+      - env
       - apk -qq update && apk -qq --no-cache add git mercurial bzr
       - go get -t ./...
       - go test -v ./...
@@ -45,7 +46,6 @@ deploy:
     vars:
       image: us.gcr.io/nyt-video-dev/video-captions-api:$$COMMIT
       app: video-captions-api
-      google_json_credentials: $$GOOGLE_CREDENTIALS_STG
       env: stg
       port: 8000
       ce_esp_port: 8001
@@ -84,7 +84,6 @@ deploy:
     vars:
       image: us.gcr.io/nyt-video-dev/video-captions-api:$$COMMIT
       app: video-captions-api
-      google_json_credentials: $$GOOGLE_CREDENTIALS_PRD
       env: prd
       replicas: 5
       # NOTE: recommend minimum of 2 to ensure uptime during a rolling deploy.
