fix golint complains and run golint in drone

--- a/.drone.yml
+++ b/.drone.yml
@@ -6,6 +6,7 @@ build:
       - env
       - apk -qq update && apk -qq --no-cache add git mercurial bzr
       - go get -t ./...
+      - golint ./...
       - go test -v ./...
       - go build -o captions-api
     when:
