create datastore client based on env

--- a/.drone.yml
+++ b/.drone.yml
@@ -49,6 +49,7 @@ deploy:
       image: us.gcr.io/nyt-video-dev/video-captions-api:$$COMMIT
       app: video-captions-api
       env: stg
+      project_id: 'nyt-video-dev'
       port: 8000
       ce_esp_port: 8001
       ce_service_name: video-captions-api.endpoints.nyt-video-dev.cloud.goog
@@ -87,6 +88,7 @@ deploy:
       image: us.gcr.io/nyt-video-dev/video-captions-api:$$COMMIT
       app: video-captions-api
       env: prd
+      project_id: 'nyt-video-prd'
       replicas: 5
       # NOTE: recommend minimum of 2 to ensure uptime during a rolling deploy.
       replicas_min: 3
