--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
 - go get github.com/golang/lint/golint
 - go get -t ./...
 script: >
-  golint -set_exit_status && go build && 
+  golint -set_exit_status ./... && go build && 
   (echo "" > coverage.txt; 
   for p in $(go list ./...); do 
   go test -coverprofile=profile.out -covermode=atomic $p || export status=2; 
