--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,16 @@ go:
 - 1.8.x
 - tip
 install:
+- go get github.com/Masterminds/glide
 - go get github.com/golang/lint/golint
-- go get -t ./...
+- glide install
 script: >
-  golint -set_exit_status ./... && go build && 
-  (echo "" > coverage.txt; 
-  for p in $(go list ./...); do 
-  go test -coverprofile=profile.out -covermode=atomic $p || export status=2; 
-  if [ -f profile.out ]; then cat profile.out >> coverage.txt; rm profile.out; fi 
-  done; 
+  golint -set_exit_status ./... && go build &&
+  (echo "" > coverage.txt;
+  for p in $(go list ./...); do
+  go test -coverprofile=profile.out -covermode=atomic $p || export status=2;
+  if [ -f profile.out ]; then cat profile.out >> coverage.txt; rm profile.out; fi
+  done;
   exit ${status:-0})
 after_success: bash <(curl -s https://codecov.io/bash)
 notifications:
