--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ install:
 - go get github.com/golang/lint/golint
 - glide install
 script: >
-  golint -set_exit_status ./... && go build &&
+  golint -set_exit_status $(go list ./... | grep -v vendor) && go build &&
   (echo "" > coverage.txt;
-  for p in $(go list ./...); do
+  for p in $(go list ./... | grep -v vendor); do
   go test -coverprofile=profile.out -covermode=atomic $p || export status=2;
   if [ -f profile.out ]; then cat profile.out >> coverage.txt; rm profile.out; fi
   done;
