--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,15 +2,17 @@ FROM golang:1.8-alpine
 
 WORKDIR /go/src/github.com/NYTimes/video-captions-api
 
-RUN apk -qq update && apk -qq add --no-cache git mercurial bzr && go get github.com/pilu/fresh
+RUN apk -qq update && apk -qq add --no-cache git mercurial bzr && go get github.com/pilu/fresh && go get github.com/Masterminds/glide
 
 ENV SERVER_HTTP_PORT 8000
 ENV SERVER_GIZMO_HEALTH_CHECK_PATH /healthz
 
 COPY . .
 
-RUN go get -t ./...
+RUN glide install
 
-CMD fresh
+RUN echo 'ignored: vendor' > /tmp/runner.conf
+
+CMD fresh -c /tmp/runner.conf
 
 EXPOSE 8000
