--- a/.kube.yml
+++ b/.kube.yml
@@ -56,7 +56,7 @@ spec:
             - name: PROJECT_ID
               value: "{{.project_id}}"
             - name: ENABLE_STACKDRIVER
-              value: "true"
+              value: "false"
             - name: SERVER_HTTP_PORT
               value: "8000"
             - name: SERVER_GIZMO_HEALTH_CHECK_PATH
