--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ go:
 - 1.8.x
 - tip
 install:
-- go get github.com/golang/dep
+- go get github.com/golang/dep/cmd/dep
 - go get github.com/golang/lint/golint
 - dep ensure -v
 script: >
