--- a/.drone.yml
+++ b/.drone.yml
@@ -63,11 +63,14 @@ deploy:
       cpu: 80
       ip_name: video-captions-api
       cert_name: stg-nyt-net-cert
+      amara_team: nyt-cms
 
     # These variables are made available in the .kube.sec.yml secret template in base64 encoding.
     secrets:
       three_play_api_key: $$THREE_PLAY_API_KEY
       three_play_api_secret: $$THREE_PLAY_API_SECRET
+      amara_token: $$AMARA_TOKEN
+      amara_username: $$AMARA_USERNAME
 
     when:
       branch: master
