--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,16 @@
 language: go
 sudo: false
 go:
-- 1.8.x
+- 1.9.x
 - tip
 install:
 - go get github.com/golang/dep/cmd/dep
 - go get github.com/golang/lint/golint
 - dep ensure -v
 script: >
-  golint -set_exit_status $(go list ./... | grep -v vendor) && go build &&
+  golint -set_exit_status $(go list ./...) && go build &&
   (echo "" > coverage.txt;
-  for p in $(go list ./... | grep -v vendor); do
+  for p in $(go list ./...); do
   go test -coverprofile=profile.out -covermode=atomic $p || export status=2;
   if [ -f profile.out ]; then cat profile.out >> coverage.txt; rm profile.out; fi
   done;
