--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,11 @@ go:
 - 1.9.x
 - tip
 install:
-- go get github.com/golang/dep/cmd/dep
 - go get github.com/golang/lint/golint
-- dep ensure -v
-script: >
-  golint -set_exit_status $(go list ./...) && go build &&
-  (echo "" > coverage.txt;
-  for p in $(go list ./...); do
-  go test -coverprofile=profile.out -covermode=atomic $p || export status=2;
-  if [ -f profile.out ]; then cat profile.out >> coverage.txt; rm profile.out; fi
-  done;
-  exit ${status:-0})
-after_success: bash <(curl -s https://codecov.io/bash)
+script:
+- golint -set_exit_status $(go list ./...)
+- make coverage
+after_success:
+  - 'if [ "${JOB}" = "test" ]; then bash <(curl -s https://codecov.io/bash); fi'
 notifications:
   email: false
