Revert "travis: run Docker Hub integration as deployment step"
This reverts commit 36324893ca9ff1bdf83ac9158255125e97b7f83b.

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,6 @@ script:
 - make coverage
 after_success:
 - bash <(curl -s https://codecov.io/bash)
+- travis-scripts/docker.bash
 notifications:
   email: false
-deploy:
-- provider: script
-  script: travis-scripts/docker.bash
-  on:
-    tags: true
-    branch: master
