--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,9 @@ go:
   - 1.11.x
   - tip
 install:
-  - go get github.com/golang/lint/golint
+  - go mod download
 script:
-  - golint -set_exit_status $(go list ./...)
-  - make coverage
+  - make lint coverage
 after_success:
   - bash <(curl -s https://codecov.io/bash)
   - travis-scripts/docker.bash
