--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ env:
   global:
     - GO_FOR_RELEASE=1.x
     - GO111MODULE=on
+    - CGO_ENABLED=0
 go:
   - 1.x
   - tip
@@ -20,6 +21,7 @@ install:
   - go get github.com/golangci/golangci-lint/cmd/golangci-lint@master
 script:
   - make run-lint coverage
+  - go build -o video-captions-api
 after_success:
   - bash <(curl -s https://codecov.io/bash)
   - travis-scripts/docker.bash
