--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,11 @@ go:
   - 1.x
   - tip
 install:
-  - export $GOCACHE=$GOPATH/pkg/cache
+  - export GOCACHE=$GOPATH/pkg/cache
   - curl https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | BINDIR=$GOPATH/bin sh
   - go mod download
 script:
-  - export $GOCACHE=$GOPATH/pkg/cache
+  - export GOCACHE=$GOPATH/pkg/cache
   - make run-lint coverage
   - go build -o video-captions-api
 after_success:
